--- a/index.html
+++ b/index.html
@@ -84,13 +84,7 @@
     )
   }
 
-  const Form = () => {
-
-    function handelFormSubmit(event) {
-      event.preventDefault();
-      console.log("폼")
-    }
-
+  const Form = ({ handelFormSubmit }) => {
     return (
       <form onSubmit={handelFormSubmit}>
         <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
@@ -99,20 +93,50 @@
     )
   }
 
-  const app = (
+  /*const app = (
     <div>
       <Title>1번째 고양이 가라사대</Title>
-      <Title>2번째 고양이 가라사대</Title>
       <Form />
       <MainCard img="https://cataas.com/cat/60b73094e04e18001194a309/says/react" title="CAT1" />
       <Favorites />
     </div>
-  );
+  );*/
+
+  const App = () => {
+
+    const CAT1 = "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
+    const CAT2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
+    const CAT3 = "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
+
+    const [counter, setCounter] = React.useState(1);
+    const [mainCat, setMainCat] = React.useState(CAT1);
+
+    console.log("카운터", counter)
+
+
+
+    function handelFormSubmit(event) {
+      event.preventDefault();
+      setCounter(counter + 1)
+      setMainCat(CAT2);
+      console.log(counter + " 폼 전송 " + mainCat);
+    }
+
+
+    return (
+      <div>
+        <Title>{counter} 번째 고양이 가라사대</Title>
+        <Form handelFormSubmit={handelFormSubmit} />
+        <MainCard img={mainCat} title="CAT1" />
+        <Favorites />
+      </div>
+    )
+  }
 
 
   const 여기다그려 = document.querySelector("#app");
 
-  ReactDOM.render(app, 여기다그려);
+  ReactDOM.render(<App />, 여기다그려);
 
 </script>
 
